<resources>
    <string name="app_name">MorangosDaCidadeMobile</string>
    <string name="title_activity_produtos">Produtos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_carrinho">Carrinho</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_confirmacao">Confirmacao</string>
    <string name="title_activity_pagamento">Pagamento</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_sucesso">Sucesso</string>
    <string name="acesse">Acesse sua conta</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="entrar">ENTRAR</string>
    <string name="naotemconta">Não tem uma conta?</string>
    <string name="cadastro"> <u>Cadastre-se aqui</u></string>
    <string name="entrar1">Entrar</string>
    <string name="logo_description">Logotipo da Fazenda Morangos da Cidade</string>
    <string name="criesuaconta">Crie sua conta</string>
    <string name="nome">Nome</string>
    <string name="cep">CEP</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="registrar">Registrar</string>
    <string name="bemvindo">Bem-vindo, Fulano!</string>
    <string name="dadospessoais">Dados Pessoais</string>
    <string name="nome1">Nome: João da Silva</string>
    <string name="Email1">E-mail: joao.silva@email.com</string>
    <string name="telefone1">Telefone: (11) 91234–5678</string>
    <string name="cpf1">CPF: 123.456.789–00</string>
    <string name="endereco1">Endereço: Rua Exemplo, 123, São Paulo, SP</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="excluircadastro">Excluir Cadastro</string>
    <string name="iconedeconfirmacao">Ícone de confirmação</string>
    <string name="confirmacao">Confirmação de Pedido</string>
    <string name="detalhes">Detalhes do Cliente</string>
    <string name="nomecliente">Nome: João Silva</string>
    <string name="telefonecliente">Telefone: (11) 99999-9999</string>
    <string name="detalhespedido">Detalhes do Pedido</string>
    <string name="pedido">Pedido: 2 caixas de morangos</string>
    <string name="total1">Total: R$ 40,00</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="iconedeperfil">Ícone de Perfil</string>
    <string name="gerperfil">Gerenciamento de Perfil</string>
    <string name="informacoes">Informações Pessoais</string>
    <string name="nomecompleto">Nome Completo</string>
    <string name="salvaralteracoes">Salvar Alterações</string>
    <string name="endereco">Endereço</string>
    <string name="salvar_endereco">Salvar Endereço</string>
    <string name="seguranca">Segurança</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="nome_do_titular">Nome do Titular</string>
    <string name="exemplo">Exemplo: João da Silva</string>
    <string name="numero_cartao">Número do Cartão</string>
    <string name="ex">0000 0000 0000 0000</string>
    <string name="validade">Validade</string>
    <string name="mes">MM</string>
    <string name="ano">AAAA</string>
    <string name="cvc">Código de Segurança (CVC)</string>
    <string name="codigo">000</string>
    <string name="finalizar_pagamento">Finalizar Pagamento</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_produtos">Buscar produtos...</string>
    <string name="confirmacao_de_pagamento">Ícone de confirmação de Pagamento</string>
    <string name="pedido1234">Pedido: #12345</string>
    <string name="total_compra">Total: R$ 150,00</string>
    <string name="data">Data: 22/11/2024</string>
    <string name="pagamento_concluido">Pagamento Concluído!</string>
    <string name="obrigado">Obrigado pela sua compra!</string>
    <string name="voltar">Voltar à Página Inicial</string>
    <string name="meu_carrinho">Meu Carrinho</string>
    <string name="resumo_do_pedido">Resumo do Pedido</string>
    <string name="subtotal">Subtotal</string>
    <string name="valor_subtotal">R$ 185,00</string>
    <string name="total">Total</string>
    <string name="valor_total">R$ 185,00</string>
    <string name="finaliza_compra">Finalizar Compra</string>
    <string name="continuar_comprando">Continuar Comprando</string>
    <string name="bem_vindo">Bem-vindo à Fazenda Morangos da Cidade!</string>
    <string name="texto1">Produzimos morangos frescos e orgânicos com o maior cuidado para garantir qualidade e sabor incomparáveis.</string>
    <string name="texto2">Nossa fazenda está localizada no coração da cidade de São Paulo, um exemplo de fazenda urbana que combina sustentabilidade e inovação. Venha nos visitar e conheça como produzimos alimentos frescos perto de você!</string>
    <string name="texto3">Conheça nossos produtos e aproveite as ofertas especiais disponíveis para você! Produtos frescos, direto da fazenda para a sua casa.</string>
    <string name="comprar_agora">Comprar Agora</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="preco">Preço</string>
    <string name="diminuir_quantidade">Diminuir quantidade</string>
    <string name="qtd">Qtd</string>
    <string name="aumentar_quantidade">Aumentar quantidade</string>
    <string name="imagemdoproduto">Imagem do Produto</string>
    <string name="nomedoproduto">Nome do Produto</string>
    <string name="precoproduto">Preço</string>
    <string name="qtd1">Qtd</string>
    <string name="comprar">Comprar</string>
    <string name="perfil">Perfil</string>
    <string name="imagem_de_perfil">Imagem de perfil</string>
    <string name="ola">Olá! Bem-vindo</string>
    <string name="joaodasilva">João da Silva</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="imagem_homem_na_fazenda">Homem na fazenda</string>
    <string name="remover_item">Remover Item</string>
    <string name="pedido_">Pedido #</string>
    <string name="total_compra_">Total da Compra: R$ %1$s</string>
    <string name="data_compra">Data da Compra: %1$s</string>
    <string name="voltar_">Voltar</string>
    <string name="carrinho">Carrinho</string>
    <string name="home">Home</string>
    <string name="produtos">Produtos</string>
    <string name="perfil1">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>