<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F4F4F4">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_compra"
        android:textSize="24sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/edittext_background"
        android:elevation="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="8dp">


        <TextView
                android:id="@+id/NomeTitular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_titular"
                android:textSize="16sp"
                android:textColor="#757575"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/input_NomeTitular"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="name"
                android:background="@drawable/input_background"
                android:hint="@string/exemplo"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#333333"
                android:textSize="16sp" />

            <!-- Número do cartão -->
            <TextView
                android:id="@+id/NumeroCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_cartao"
                android:textSize="16sp"
                android:textColor="#757575"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/input_NumeroCartao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:autofillHints="creditCardNumber"
                android:background="@drawable/input_background"
                android:hint="@string/ex"
                android:padding="12dp"
                android:textColor="#333333"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/expiryDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validade"
                android:textSize="16sp"
                android:textColor="#757575"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical">

                <EditText
                    android:id="@+id/Mes"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:hint="@string/mes"
                    android:maxLength="2"
                    android:autofillHints="creditCardExpirationMonth"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/Ano"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:hint="@string/ano"
                    android:inputType="number"
                    android:maxLength="4"
                    android:autofillHints="creditCardExpirationYear"
                    android:padding="12dp"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Código de segurança -->
            <TextView
                android:id="@+id/Cvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvc"
                android:textSize="16sp"
                android:textColor="#757575"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/cvc"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/input_background"
                android:hint="@string/codigo"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:autofillHints="creditCardSecurityCode"
                android:padding="12dp"
                android:textColor="#333333"
                android:textSize="16sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <Button
        android:id="@+id/btn_pagamento"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_pagamento"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:backgroundTint="#008000"
        android:padding="14dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>
