<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="#FFFFFF">

    <!-- Layout principal (RelativeLayout) para permitir o posicionamento do ícone de lixeira -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <!-- Ícone de lixeira no canto superior direito -->
        <ImageButton
            android:id="@+id/iconLixeira"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/lixeira"
            android:contentDescription="@string/remover_item"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:importantForAccessibility="yes" />

        <!-- Imagem do Produto -->
        <ImageView
            android:id="@+id/imageProduto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/imagemdoproduto"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <!-- Detalhes do Produto -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/imageProduto"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Nome do Produto -->
            <TextView
                android:id="@+id/textNomeProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/nomedoproduto"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Valor do Produto -->
            <TextView
                android:id="@+id/textValorProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/precoproduto"
                android:textColor="#4CAF50"
                android:textSize="16sp" />

            <!-- Controles de Quantidade -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- Ícone Diminuir Quantidade -->
                <ImageButton
                    android:id="@+id/iconDiminuirQuantidade"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/diminuir_quantidade"
                    android:scaleType="centerInside"
                    android:src="@drawable/menos1" />


                <!-- Quantidade -->
                <EditText
                    android:id="@+id/editQuantidadeProduto"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="quantity"
                    android:background="@drawable/input_background"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/qtd"
                    android:inputType="number"
                    android:textColor="#000000" />

                <!-- Ícone Aumentar Quantidade -->
                <ImageButton
                    android:id="@+id/iconAumentarQuantidade"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/aumentar_quantidade"
                    android:scaleType="centerInside"
                    android:src="@drawable/mais" />

            </LinearLayout>

            <!-- Botão Comprar -->
            <Button
                android:id="@+id/buttonComprarProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:backgroundTint="#D32F2F"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/comprar"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
