<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/background3">

    <!-- Banner de Boas-Vindas -->
    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imagem_homem_na_fazenda"
        android:src="@drawable/fazenda"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/Bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#008000"
        app:layout_constraintTop_toBottomOf="@id/ivBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center" />


    <TextView
        android:id="@+id/tvFarmDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"
        android:textColor="#555555"
        app:layout_constraintTop_toBottomOf="@id/Bemvindo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Texto sobre os produtos -->
    <TextView
        android:id="@+id/tvProductsInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/texto3"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"
        android:textStyle="italic"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@id/tvFarmDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Botão de ação -->
    <Button
        android:id="@+id/btnShopNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar_agora"
        android:textColor="#FFFFFF"
        android:backgroundTint="#008000"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvProductsInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
