<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical">

            <TextView
                android:id="@+id/textNomeProduto"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_produto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageProduto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/albion"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imagem_do_produto"
                android:elevation="2dp"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textValorProduto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preco"
                    android:textSize="16sp"
                    android:textColor="#4CAF50"
                    android:layout_marginBottom="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">


                    <ImageView
                        android:id="@+id/iconDiminuirQuantidade"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/menos1"
                        android:contentDescription="@string/diminuir_quantidade"
                        android:layout_marginEnd="8dp" />


                    <EditText
                        android:id="@+id/editQuantidadeProduto"
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:background="@drawable/input_background"
                        android:gravity="center"
                        android:hint="@string/qtd"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:focusable="false"
                        android:layout_marginEnd="8dp" />


                    <ImageView
                        android:id="@+id/iconAumentarQuantidade"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/mais"
                        android:contentDescription="@string/aumentar_quantidade" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
